syntax= "proto3";

package services;
option go_package=".;services";

message UserRequest {
  int32 user_id = 1;
  string user_name = 2;
}

message UserRequestByName {
  string user_name = 1;
}
message UserInfo {
  int32 user_id = 1;
  string user_name = 2;
  int32 age = 3;
}

message UserResponse {
  UserInfo user = 1;
}

message UserID {
  int32 user_id = 1;
}
service UserService {
  rpc GetUserName(UserRequest) returns (UserResponse);
  rpc GetUserInfo(UserRequest) returns (UserInfo);
  rpc GetUserID(UserRequestByName) returns (UserID);
}